@@ -183,7 +183,10 @@ endif
 if COND_STACK_TRACE
 libqore_la_SOURCES += CallStack.cc
 endif
+endif
 
+if COND_SOLARIS_CC_X86_64
+libqore_la_SOURCES += sunpro-x86_64.s
 endif
 
 libqore_la_LDFLAGS = -version-info 4:0:0 -no-undefined $(OPENSSL_LDFLAGS) $(LIBXML2_LDFLAGS) $(PCRE_LDFLAGS) $(ZLIB_LDFLAGS) $(BZ2_LDFLAGS) $(LDFLAGS) -lm
