@@ -1,6 +1,8 @@
 2008.09.11: David Nichols
 	* enabled atomic operations on SPARC with gcc
 	* enabled stack monitoring on SPARC with gcc
+	* enabled atomic reference counting and stack guard for solaris x86_64
+	  with SunPro CC
 
 2008.09.10: David Nichols
 	* added call_builtin_function() and call_builtin_function_args()
